--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,7 +1,5 @@
 ---
-// import astroLogo from "../assets/astro.svg";
-// import background from "../assets/background.svg";
-import { Databind } from "../components/Databind";
+// import { Databind } from "../components/Databind";
 ---
 
 <div id='container'>
@@ -16,9 +14,6 @@ import { Databind } from "../components/Databind";
         Kids can practice ABC's. The input text will bind the text to display
         larger text for kids learning.
       </p>
-    </section>
-    <section class='container mx-auto font-extrabold text-green-500'>
-      <Databind client:load />
     </section>
   </main>
 </div>
