--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,37 +1,28 @@
 ---
-import astroLogo from "../assets/astro.svg";
+import Logo from "../assets/logo.svg";
 import background from "../assets/background.svg";
+import { Databind } from "../components/Databind";
 ---
 
 <div id='container'>
-  <img id='background' src={background.src} alt='' fetchpriority='high' />
+  <img
+    id='background'
+    src={background.src}
+    alt='background image'
+    fetchpriority='high'
+  />
   <main>
-    <section id='hero'>
-      <a href='https://astro.build'
-        ><img
-          src={astroLogo.src}
-          width='115'
-          height='48'
-          alt='Astro Homepage'
-        /></a
-      >
-      <h1>
-        To get started, open the <code><pre>src/pages</pre></code> directory in your
-        project.
+    <section class='container mx-auto w-auto p-4 items-center bg-gray-300'>
+      <h1 class='text-4xl md:text-9xl font-thin'>
+        <span class='font-extralight'>Kids</span>Bind
       </h1>
-      <section id='links'>
-        <a class='button' href='https://docs.astro.build'>Read our docs</a>
-        <a href='https://astro.build/chat'
-          >Join our Discord <svg
-            xmlns='http://www.w3.org/2000/svg'
-            viewBox='0 0 127.14 96.36'
-            ><path
-              fill='currentColor'
-              d='M107.7 8.07A105.15 105.15 0 0 0 81.47 0a72.06 72.06 0 0 0-3.36 6.83 97.68 97.68 0 0 0-29.11 0A72.37 72.37 0 0 0 45.64 0a105.89 105.89 0 0 0-26.25 8.09C2.79 32.65-1.71 56.6.54 80.21a105.73 105.73 0 0 0 32.17 16.15 77.7 77.7 0 0 0 6.89-11.11 68.42 68.42 0 0 1-10.85-5.18c.91-.66 1.8-1.34 2.66-2a75.57 75.57 0 0 0 64.32 0c.87.71 1.76 1.39 2.66 2a68.68 68.68 0 0 1-10.87 5.19 77 77 0 0 0 6.89 11.1 105.25 105.25 0 0 0 32.19-16.14c2.64-27.38-4.51-51.11-18.9-72.15ZM42.45 65.69C36.18 65.69 31 60 31 53s5-12.74 11.43-12.74S54 46 53.89 53s-5.05 12.69-11.44 12.69Zm42.24 0C78.41 65.69 73.25 60 73.25 53s5-12.74 11.44-12.74S96.23 46 96.12 53s-5.04 12.69-11.43 12.69Z'
-            ></path></svg
-          >
-        </a>
-      </section>
+      <p>
+        Kids can practice ABC's. The input text will bind the text to display
+        larger text for kids learning.
+      </p>
+    </section>
+    <section class='container mx-auto font-extrabold text-green-500'>
+      <Databind client:load />
     </section>
   </main>
 </div>
@@ -46,7 +37,7 @@ import background from "../assets/background.svg";
     z-index: -1;
     filter: blur(100px);
   }
-
+  /* 
   #container {
     font-family: Inter, Roboto, "Helvetica Neue", "Arial Nova", "Nimbus Sans",
       Arial, sans-serif;
@@ -201,5 +192,5 @@ import background from "../assets/background.svg";
     h1 {
       line-height: 1.5;
     }
-  }
+  } */
 </style>
