--- a/src/layouts/Layout_blank.astro
+++ b/src/layouts/Layout_blank.astro
@@ -1,7 +1,7 @@
 ---
 import "../styles/global.css";
-// import Header from "../components/Header.astro";
-import Navbar from "../components/Navbar";
+import Navbar from "../components/Navbar.tsx";
+// import Header1 from "../components/Header1.tsx";
 import Footer from "../components/Footer.astro";
 ---
 
@@ -13,7 +13,7 @@ import Footer from "../components/Footer.astro";
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
 
     <meta name='generator' content={Astro.generator} />
-    <title>KidsBind</title>
+    <title>KidsBind-blank</title>
   </head>
   <body class='flex flex-col min-h-screen'>
     <Navbar client:load />
