--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,17 +2,16 @@
 // import { Databind } from "../components/Databind";
 ---
 
-<div id='container'>
+<div class='flex-grow'>
   <!-- <img id='background' src={background.src} alt='' fetchpriority='high' /> -->
   <main>
-    <section class='container mx-auto w-auto p-4 items-center bg-gray-300'>
-      <!-- <h1 class='text-3xl font-bold underline text-purple-500'>ABOUT</h1> -->
-      <h1 class='text-4xl md:text-9xl font-thin'>
-        <span class='font-extralight'>Kids</span>Bind
-      </h1>
-      <p>
-        Kids can practice ABC's. The input text will bind the text to display
-        larger text for kids learning.
+    <section class='container mx-auto w-auto p-4 items-center bg-gray-000'>
+      <h1 class='text-3xl mb-4 font-light underline'>ABOUT</h1>
+
+      <p class='text-2xl leading-relaxed'>
+        I am a Jason Lee Wilson, a professional Front End Developer who wanted
+        to build something for my babies. Kids can practice ABC's. The input
+        text will bind the text to display larger text for kids learning.
       </p>
     </section>
   </main>
