--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,8 +2,7 @@
 import Logo from "../assets/logo.svg";
 ---
 
-<div class='container text-center'>
-  <!-- <img id='background' src={background.src} alt='' fetchpriority='high' /> -->
+<div class='container mx-auto p-4 text-center'>
   <footer>
     &copy; KidsBind 2025.
     <br />
