--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ import Logo from "../assets/logo.svg";
     <a
       href='https://jasonleewilson.com/'
       target='_blank'
-      aria-lable='goto jasonleewilson.com'
+      aria-label='goto jasonleewilson.com'
       >Built with love by: jasonleewilson.com</a
     >
 
