--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,10 @@ import Footer from "../components/Footer.astro";
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
 
     <meta name='generator' content={Astro.generator} />
+    <meta
+      name='description'
+      content="Kids can practice ABC's. The input text will bind the text to display larger text for kids learning. Built something for my babies."
+    />
     <title>KidsBind</title>
   </head>
   <body class='flex flex-col min-h-screen'>
