--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -13,6 +13,7 @@
         to build something for my babies. Kids can practice ABC's. The input
         text will bind the text to display larger text for kids learning.
       </p>
+      <a href='/' aria-label='go try it out'>go back and try it out</a>
     </section>
   </main>
 </div>
