--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ import Footer from "../components/Footer.astro";
     />
     <title>KidsBind</title>
   </head>
-  <body class='flex flex-col min-h-screen'>
+  <body class='flex flex-col min-h-screen bg-gray-300'>
     <Navbar client:load />
     <slot />
     <Footer />
