--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,17 +3,27 @@
 ---
 
 <div class='flex-grow'>
-  <!-- <img id='background' src={background.src} alt='' fetchpriority='high' /> -->
   <main>
     <section class='container mx-auto w-auto p-4 items-center bg-gray-000'>
-      <h1 class='text-3xl mb-4 font-light underline'>ABOUT</h1>
+      <h1 class='text-8xl mb-4'>
+        <span class='bold'>Kids</span><span class='font-extralight'>Bind</span>
+      </h1>
+
+      <h2 class='text-3xl mb-4 font-light underline'>ABOUT</h2>
+
+      <p class='text-2xl mb-4 leading-relaxed'>
+        Kids can practice ABC's. The input text will bind the text to display
+        larger text for kids learning.
+      </p>
 
       <p class='text-2xl leading-relaxed'>
         I am a Jason Lee Wilson, a professional Front End Developer who wanted
-        to build something for my babies. Kids can practice ABC's. The input
-        text will bind the text to display larger text for kids learning.
+        to build something for my babies.
       </p>
-      <a href='/' aria-label='go try it out'>go back and try it out</a>
+
+      <a href='/' class='btn' aria-label='go try it out'
+        >go back and try it out
+      </a>
     </section>
   </main>
 </div>
